syntax = "proto3";

package models;

import "google/protobuf/timestamp.proto";

option go_package="mgrankin-cloud.sso.v1;ssov3";

service Models {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  rpc GetChat(GetChatRequest) returns (GetChatResponse);

  rpc GetApp(GetAppRequest) returns (GetAppResponse);

  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
}

message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  int64 user_id = 1;
  string email = 2;
  string username = 3;
  string phone = 4;
  bytes photo = 5;
  bool active = 6;
}

message GetChatRequest {
  int64 chat_id = 1;
}

message GetChatResponse {
  int64 chat_id = 1;
  string chat_name = 2;
  bytes photo = 3;
  repeated GetUserResponse participants = 4;
  ChatType chat_type = 5;
}

enum ChatType {
  CHAT_TYPE_UNSPECIFIED = 0;
  CHAT_TYPE_GROUP = 1;
  CHAT_TYPE_PERSONAL = 2;
}

message GetAppRequest {
  int64 app_id = 1;
}

message GetAppResponse {
  int64 app_id = 1;
  string name = 2;
  string secret = 3;
}

message GetMessageRequest {
  int64 message_id = 1;
  repeated GetChatResponse chat_id = 2;
}

message GetMessageResponse {
  int64 message_id = 1;
  repeated GetChatResponse chat_id = 2;
  string content = 3;
  google.protobuf.Timestamp created_at = 4;
  int64 created_by = 5;
  int64 reply_to = 6;
  int64 received_by = 7;
  google.protobuf.Timestamp received_at = 8;
  bool is_read = 9;
}